fix overflow-x not funcitoning on Safari

--- a/fle_site/apps/main/static/css/_kickstarter_mobile.css
+++ b/fle_site/apps/main/static/css/_kickstarter_mobile.css
@@ -12,7 +12,7 @@
 	}
 	#sticky-mailchimp {
 		width: 550px;
-	    right: -8%;
+	    /*right: -8%;*/
 	    float: right;
 	    position: relative;
 	    top: 18%;
